// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavGroup Test > Snapshot > Active 1`] = `
.c2 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  margin: 0px 0px 0px 0px;
  color: #5E56F0;
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  -webkit-transition-timing-function: cubic-bezier(.3,0,0,1);
  transition-timing-function: cubic-bezier(.3,0,0,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-property: color;
  transition-property: color;
}

.c5 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  margin: 0px 0px 0px 0px;
  color: #F4800B;
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  -webkit-transition-timing-function: cubic-bezier(.3,0,0,1);
  transition-timing-function: cubic-bezier(.3,0,0,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-property: color;
  transition-property: color;
}

.c3 {
  font-size: 1.4rem;
  line-height: 1.8rem;
  display: block;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  margin: 0px 0px 0px 0px;
  font-style: normal;
  font-weight: normal;
  color: inherit;
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  -webkit-transition-timing-function: cubic-bezier(.3,0,0,1);
  transition-timing-function: cubic-bezier(.3,0,0,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-property: color;
  transition-property: color;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 20px;
  max-width: 20px;
  margin-right: 8px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  margin-left: 8px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 28px;
  padding: 0 6px;
  cursor: pointer;
  background-color: transparent;
  border: 0;
  outline: 0;
  overflow: hidden;
  border-radius: 6px;
  color: #5E56F0;
  background-color: #5E56F01A;
}

<button
  aria-controls="generalMenu"
  aria-haspopup="false"
  class="c0"
  data-testid="bezier-react-nav-group"
  role="menuitem"
>
  <div
    class="c1"
  >
    <svg
      aria-hidden="true"
      class="c2"
      color="bgtxt-blue-normal"
      data-testid="bezier-react-nav-group-left-icon"
      fill="none"
      focusable="false"
      foundation="[object Object]"
      height="20"
      marginbottom="0"
      marginleft="0"
      marginright="0"
      margintop="0"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M17 12a5 5 0 1 1-10 0 5 5 0 0 1 10 0Z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
    <span
      style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
    >
      Dot
    </span>
  </div>
  <span
    class="c3"
    data-testid="bezier-react-text"
  >
    test-content
  </span>
  <div
    class="c4"
  >
    <svg
      aria-hidden="true"
      class="c5"
      color="bgtxt-orange-normal"
      data-testid="bezier-react-icon"
      fill="none"
      focusable="false"
      foundation="[object Object]"
      height="16"
      marginbottom="0"
      marginleft="0"
      marginright="0"
      margintop="0"
      viewBox="0 0 24 24"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M17 12a5 5 0 1 1-10 0 5 5 0 0 1 10 0Z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
    <span
      style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
    >
      Dot
    </span>
  </div>
</button>
`;

exports[`NavGroup Test > Snapshot > Not active 1`] = `
.c2 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  margin: 0px 0px 0px 0px;
  color: #00000066;
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  -webkit-transition-timing-function: cubic-bezier(.3,0,0,1);
  transition-timing-function: cubic-bezier(.3,0,0,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-property: color;
  transition-property: color;
}

.c5 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  margin: 0px 0px 0px 0px;
  color: #F4800B;
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  -webkit-transition-timing-function: cubic-bezier(.3,0,0,1);
  transition-timing-function: cubic-bezier(.3,0,0,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-property: color;
  transition-property: color;
}

.c3 {
  font-size: 1.4rem;
  line-height: 1.8rem;
  display: block;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  margin: 0px 0px 0px 0px;
  font-style: normal;
  font-weight: normal;
  color: inherit;
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  -webkit-transition-timing-function: cubic-bezier(.3,0,0,1);
  transition-timing-function: cubic-bezier(.3,0,0,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-property: color;
  transition-property: color;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 20px;
  max-width: 20px;
  margin-right: 8px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  margin-left: 8px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 28px;
  padding: 0 6px;
  cursor: pointer;
  background-color: transparent;
  border: 0;
  outline: 0;
  overflow: hidden;
  border-radius: 6px;
  color: #000000D9;
}

.c0:hover {
  background-color: #0000000D;
}

.c0:focus-visible {
  background-color: #0000000D;
}

<button
  aria-controls="generalMenu"
  aria-haspopup="false"
  class="c0"
  data-testid="bezier-react-nav-group"
  role="menuitem"
>
  <div
    class="c1"
  >
    <svg
      aria-hidden="true"
      class="c2"
      color="txt-black-dark"
      data-testid="bezier-react-nav-group-left-icon"
      fill="none"
      focusable="false"
      foundation="[object Object]"
      height="20"
      marginbottom="0"
      marginleft="0"
      marginright="0"
      margintop="0"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M17 12a5 5 0 1 1-10 0 5 5 0 0 1 10 0Z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
    <span
      style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
    >
      Dot
    </span>
  </div>
  <span
    class="c3"
    data-testid="bezier-react-text"
  >
    test-content
  </span>
  <div
    class="c4"
  >
    <svg
      aria-hidden="true"
      class="c5"
      color="bgtxt-orange-normal"
      data-testid="bezier-react-icon"
      fill="none"
      focusable="false"
      foundation="[object Object]"
      height="16"
      marginbottom="0"
      marginleft="0"
      marginright="0"
      margintop="0"
      viewBox="0 0 24 24"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M17 12a5 5 0 1 1-10 0 5 5 0 0 1 10 0Z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
    <span
      style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
    >
      Dot
    </span>
  </div>
</button>
`;
